Two fixes that only cropped up during Reason integration
1. fixed bug where adding/removing options from checkboxes/dropdowns/radio
sets was occasionally causing extra elements to appear in the preview.

2. fixed bug where the "Restore" button was appearing in an invalid
location

--- a/src/styles/formbuilder.styl
+++ b/src/styles/formbuilder.styl
@@ -47,9 +47,8 @@ $editing-border = darken($editing-bg, 7%)
 }
 
 .fb-op-buttons-wrapper {
-  position: absolute;
-  right: 20px;
-  top: 10px;
+  width: 100%;
+  text-align:right;
 }
 
 .fb-left {
